--- a/style.css
+++ b/style.css
@@ -35,39 +35,91 @@ nav ul li {
     grid-template-rows: repeat(3, 10vw);
     grid-template-columns: repeat(3, 10vw);
     font-family: 'Roboto', sans-serif;
+    position: relative;
 }
-
+.line{
+    background-color: black;
+    height: 3px;
+    width: 0vw;
+    position: absolute;
+    font-weight: 800;
+    transition: width .5s ease-in-out;
+}
 .box {
     border: 2px solid black;
     font-size: 8vw;
-    cursor:pointer;
+    cursor: pointer;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.box:hover{
+
+.box:hover {
     background-color: rgb(245, 211, 245);
 }
-.gameInfo{
+.info{
+    font-size: 25px;
+    font-weight: 500;
+}
+.gameInfo {
     padding: 0 34px;
     font-family: 'Baloo 2', cursive;
 }
-.imgBox img{
-    display: none;
+
+.imgBox img {
+    width: 0;
+    transition: width .3s ease-in-out;
 }
 
-.bt-0{
+.bt-0 {
     border-top: 0;
 }
 
-.bb-0{
+.bb-0 {
     border-bottom: 0;
 }
 
-.bl-0{
+.bl-0 {
     border-left: 0;
 }
 
-.br-0{
+.br-0 {
     border-right: 0;
+}
+
+#reset {
+    margin: 0 23px;
+    padding: 1px 18px;
+    background-color: rgb(242, 187, 242);
+    border-radius: 6px;
+    cursor: pointer;
+    font-family: 'Baloo 2', cursive;
+    font-size: 15px;
+    font-weight: bolder;
+}
+.gameInfoContainer{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+@media (max-width:560px) {
+    .gameContainer{
+        flex-wrap: wrap;
+    }
+    .gameInfo{
+        margin-top: 3rem;
+    }
+}
+@media (max-width:400px) {
+    .container {
+        grid-template-rows: repeat(3, 25vw);
+        grid-template-columns: repeat(3, 25vw);
+    }
+    .gameInfo{
+        font-size: 12px;    
+    }
+    .box{
+        font-size: 24vw;
+    }
 }
